# parallel

./: .gitignore  .mpi_hello.swp  README.md  hello
CalculoPi/: CalculoPi.opensdf  CalculoPi.sln
CalculoPi/CalculoPi/: CalculoPi.cpp  CalculoPi.vcxproj  CalculoPi.vcxproj.filters  ReadMe.txt  stdafx.cpp
calculo_pi_montecarlo/: calculo_pi.sln
calculo_pi_montecarlo/calculo_pi/: calculo_pi.c  calculo_pi.vcxproj  calculo_pi.vcxproj.filters
cuda_pi/: autoparvec_pi.c  build.bat  cuda_pi.cu  cuda_pi.h  secuencial_pi.c
mpi_config/: .mpd.conf  hosts  interfaces
mpi_hello/: hello  mpi_hello.c
mpi_mandelbrot/: .gitignore  Makefile.am  configure.ac
mpi_mandelbrot/src/: Makefile.am  mandelbrot.c  mandelbrot_balanced.h  mandelbrot_common.h  mandelbrot_serial.h  mandelbrot_unbalanced  mandelbrot_unbalanced.h  mpi_layer.h
mpi_mandelbrot/tests/: Makefile.am  check_mandelbrot  check_mandelbrot.c  check_mandelbrot_balanced.c  check_mandelbrot_common.c  mpi_layer_stub.h
mpi_sample/: mpi_sample  mpi_sample.c
mpi_traslate/: .gitignore  Makefile.am  configure.ac
mpi_traslate/src/: Makefile.am  mpi_layer.h  stb_image.h  traslate.c  traslate_common.h  traslate_unbalanced.h
mpi_traslate/tests/: Makefile.am  check_traslate  check_traslate.c  check_traslate_common  check_traslate_common.c  mpi_layer_stub.h
mult_matrices/: mult_matrices.sln
mult_matrices/mult_matrices/: common_functions.h  data.h  defines.h  mult_dynamic_vectorized.h  mult_dynamic_worker.h  mult_matrices.c  mult_matrices.vcxproj  mult_matrices.vcxproj.filters  mult_matrices_producto.c  mult_producto.h  mult_renglon.h  mult_renglon_vec.h
mult_matrices/mult_matrices_opencl/: Codigo.cpp  MatrixMultiplicationVS10.vcxproj
mult_matrices/mult_matrices_openmp/: build.bat  common_functions.h  data.h  mult_matrices.c
mult_matrices/mult_matrices_secuencial/: build_run.bat  common_functions.h  data.h  defines.h  mult_matrices.c
network_config/: interfaces
prefix_sum/: data.h  main.c  prefix_sum  prefix_sum.sdf  prefix_sum.sln  prefix_sum.vcxproj  prefix_sum.vcxproj.filters  sequential_prefix.c
prefix_sum/Debug/: .gitignore
prefix_sum/prefix_sum/: prefix_sum.aps  prefix_sum.vcxproj
prefix_sum/prefix_sum/Release/: .gitignore
prefix_sum/prefix_sum/ipch/prefix_sum-afe776ea/: .gitignore
zeromq/: zeromq.sln
zeromq/TestResults/: zeromq.TE.Tests.mdf  zeromq.TE.Tests_log.ldf
zeromq/ZMQ.Common/: Helper.cs  ParaTypeValidation.cs  ParamTypeParseExtensions.cs  ProgramHelper.cs  ZMQ.Common.csproj
zeromq/ZMQ.Common/Properties/: AssemblyInfo.cs
zeromq/ZMQ.PipeSort/: HelperExtensions.cs  ISocket.cs  PipeMaster.cs  PipeNode.cs  Program.cs  SocketAdapter.cs  ZMQ.PipeSort.csproj
zeromq/ZMQ.PipeSort.Test/: IntegrationTest.cs  PipeMasterTest.cs  PipeNodeTest.cs  Program.cs  TestHelper.cs  ZMQ.PipeSort.Test.csproj  packages.config
zeromq/ZMQ.PipeSort.Test/Properties/: AssemblyInfo.cs
zeromq/ZMQ.PipeSort/Properties/: AssemblyInfo.cs
zeromq/ZMQ.Sum/: Comunicacion.cs  Helper.cs  LinqPadSumaSecuencial.linq  Proceso.cs  SumSlave.cs  ZMQ.Sum.csproj  ZMQInicializador.cs
zeromq/ZMQ.Sum.Broadcast/: Program.cs  ZMQ.Sum.Broadcast.Master.csproj
zeromq/ZMQ.Sum.Broadcast.Slave/: Program.cs  ZMQ.Sum.Broadcast.Slave.csproj
zeromq/ZMQ.Sum.Broadcast.Slave/Properties/: AssemblyInfo.cs
zeromq/ZMQ.Sum.Broadcast.Test/: Program.cs  SumadorBroadcastEsclavoTest.cs  SumadorMaestroTest.cs  ZMQ.Sum.Broadcast.Test.csproj  packages.config
zeromq/ZMQ.Sum.Broadcast.Test/Properties/: AssemblyInfo.cs
zeromq/ZMQ.Sum.Broadcast/Properties/: AssemblyInfo.cs
zeromq/ZMQ.Sum.MasterRunner/: Program.cs  ZMQ.Sum.SendRecv.Master.csproj
zeromq/ZMQ.Sum.MasterRunner/Properties/: AssemblyInfo.cs
zeromq/ZMQ.Sum.SlaveRunner/: Program.cs  ZMQ.Sum.SendRecv.Slave.csproj
zeromq/ZMQ.Sum.SlaveRunner/Properties/: AssemblyInfo.cs
zeromq/ZMQ.Sum.Test/: ExtensionsTest.cs  Program.cs  SumadorEsclavoTest.cs  SumadorSendRecvMaestroTest.cs  ZMQ.Sum.SendRecv.Test.csproj  ZMQ.Sum.Test.csproj  packages.config
zeromq/ZMQ.Sum.Test/Properties/: AssemblyInfo.cs
zeromq/ZMQ.Sum.Test/SendRecv/: SumadorEsclavoTest.cs  SumadorMaestroTest.cs
zeromq/ZMQ.Sum/Broadcast/: SumadorBroadcastEsclavo.cs  SumadorBroadcastMaestro.cs
zeromq/ZMQ.Sum/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
zeromq/ZMQ.Sum/SendRecv/: SumadorEsclavo.cs  SumadorMaestro.cs  SumadorSendRecvEsclavo.cs  SumadorSendRecvMaestro.cs
